<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host: </string>
    <string name="server_port">Server Port: </string>
    <string name="user_name">User Name: </string>
    <string name="password">Password: </string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="email">Email: </string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>

    <string name="life_story_lines">Life Story Lines</string>
    <string name="life_story_lines_under">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="family_tree_lines_under">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="spouse_lines_under">SHOW SPOUSE LINES</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="fathers_side_under">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="mothers_side_under">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="gender_under">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logout_under">RETURN TO LOGIN SCREEN</string>
    <string name="first_name_section">FIRST NAME</string>
    <string name="last_name_section">LAST NAME</string>
    <string name="gender_section">GENDER</string>

    <string name="event_select">Click on any marker to see event details</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">Family Map: Settings</string>
    <string name="title_activity_person">Family Map: Person View</string>
    <string name="title_activity_event">Family Map: Event View</string>
    <string name="title_activity_search">Family Map: Search</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="life_events">Life Events</string>
    <string name="family">Family</string>
</resources>